[package]
name = "libpq"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
# libc = { version = "0.2.159", features = ["align"] }
postgres = "0.19.9"

[build-dependencies]
cbindgen = "0.27.0"

[profile.release]
panic = 'abort'
opt-level = 'z'
codegen-units = 1
lto = true
